# puzzles

./: .gitignore  CMakeLists.txt  README.md
include/puzzle/: dfs.h  explored_set.h  node.h  printer.h  puzzle.h  state.h
inputs/: simple.txt
src/: CMakeLists.txt  dfs.cpp  explored_set.cpp  main.cpp  node.cpp  printer.cpp  puzzle.cpp  state.cpp
test/: CMakeLists.txt  test.cpp  test_dfs.cpp  test_puzzle_action.cpp  test_puzzle_creation.cpp  test_puzzle_equality.cpp
